# libcgi

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  autogen.sh  cgi-config.cmake.in  configure  configure.in  libcgi.kdev4  libcgi.pc.cmake.in  render_md.rb
LICENSES/: MIT.txt
contrib/: libcgi.cmake
doc/html/: cgi_8h-source.html  error_8h-source.html  files.html  group__libcgi__cgi.html  group__libcgi__cookie.html  group__libcgi__general.html  group__libcgi__session.html  group__libcgi__string.html  index.html  main.html  modules.html  pages.html  session_8h-source.html  todo.html  tree.js
doc/man/man3/: cgi_cookie_value.3  cgi_process_form.3  cgi_session_var.3  file.3  libcgi_cgi.3  libcgi_cookie.3  libcgi_general.3  libcgi_session.3  libcgi_string.3  str_replace.3  todo.3
examples/guestbook/: Makefile  gbook.c  table_add_comments.html
examples/multiple/: Makefile  form.html  multiple.c  readme
examples/redirect/: Makefile  redirect.c
examples/session/session_ex1/: Makefile  destroy.c  login.c  restricted.c  session.c  session_ex1_desc.html  show_vars.c  topbar.htm
examples/session/session_ex2/: Makefile  session_ex2.c  session_ex2_desc.html
examples/simple_form/: Makefile  form1.c  form2.c  left.inc  main.inc  top.inc
examples/strings/: Makefile  b64.c  explode.c  htmlentities.c  md5.c
include/libcgi/: CMakeLists.txt  cgi.h  cgi_types.h  error.h  session.h
src/: CMakeLists.txt  base64.c  cgi.c  cgi.h  config.h  config.h.cmake.in  config.h.in  cookie.c  error.c  error.h  general.c  list.c  md5.c  session.c  string.c
test/: CMakeLists.txt  cgi_test.c  cgi_test.h  test.c  test_session.c  test_slist.c  test_trim.c  trim.c
